# date-time-parser

./: .gitignore  CMakeLists.txt  README.md  input.txt
.github/workflows/: on_push.yml
include/: DateTime.h  utils.h
src/: DateTime.cpp  main.cpp  utils.cpp
tests/: CMakeLists.txt  main_test.cpp
